# satisfy

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: runbenchmarks.py  simplest.cnf  test.cnf
doc/manual/: BackgroundSAT.tex  FutureWork.tex  Introduction.tex  Main.tex
lib/: CMakeLists.txt
lib/parser/: CMakeLists.txt
lib/parser/inc/: clause.h  cnf.h  literal.h  parser.h
lib/parser/src/: CMakeLists.txt  clause.cpp  cnf.cpp  literal.cpp  parser.cpp
lib/parser/tests/: main.cpp  parsertest.cpp
lib/preprocessor/: CMakeLists.txt
lib/preprocessor/inc/: preprocessor.h
lib/preprocessor/src/: preprocessor.cpp
lib/sat/: CMakeLists.txt
lib/sat/inc/: clause.h  cnf.h  context.h  decision.h  dpll.h  heuristic.h  literal.h  sat-types.h  utils.h
lib/sat/src/: clause.cpp  cnf.cpp  context.cpp  decision.cpp  dpll.cpp  literal.cpp
lib/sat/tests/: sattest.cpp
lib/utility/: CMakeLists.txt
lib/utility/inc/: parforeach.h  threadgroup.h
lib/utility/src/: threadgroup.cpp
lib/utility/tests/: main.cpp
src/: main.cpp
